feat(server): add 2fa support
